--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
   <string name="error_view_message_title">Something went wrong..</string>
   <string name="error_view_message_subtitle">An serious emergency case is blocking your entertainment.</string>
   <string name="error_view_retry_button">Retry</string>
+  <string name="empty_view_message_title">Select game from the side list…</string>
+  <string name="game_details_description_title">Description:</string>
+  <string name="game_details_genre_title">Genre:</string>
 </resources>
